[package]
name = "ae-fft"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
cuda = ["cust"]

[dependencies]
cust = { version = "0.3.2", optional = true }
after-effects = "0.2.1"
fft2d = "0.1.1"
ndarray = "0.16.1"
ndrustfft = "0.5.0"
num-complex = "0.4.6"
rustfft = "6.4.1"
thiserror = "2.0.16"

[build-dependencies]
chrono = "0.4.42"
pipl = "0.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(does_dialog)',
    'cfg(threaded_rendering)',
    'cfg(smart_render)',
    'cfg(feature, values("catch-panics"))',
] }
